# Identifying-Cryptographic-Function-in-Blockchain

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FunctionScoring.json  README.md  account_pages.py  api_client_github.py  api_client_google.py  api_client_supabase.py  app.py  auth.py  database.sql  file_handler.py  loginTest.py  package-lock.json  package.json  pyproject.toml  requirements-dev-lock.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  roles.py  setup.cfg
__pycache__/: .env  Analyse.py  README.md  app.py  loginTest.py
auditor/: __init__.py  auditlog.py  case.py  cli.py  evidence.py  intake.py  preproc.py  workspace.py
core/: kb.py  models.py  recommender.py  scoring.py
detectors/: README.md
docs/: ast-schema.md  audit-roadmap.md  ci.md  detectors.md  ghidra.md  optional-deps.md  pipeline.md  preproc_spec.md  setup-ux-handoff.md  tree-sitter.md  yara.md
identifying_cryptographic_function_in_blockchain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
my_venv/: pyvenv.cfg
pages/: __init__.py  advisor.py  analysis.py  auditor.py  dashboard.py  login.py  register.py  reports.py
schemas/: ast.schema.json  auditlog.schema.json  detector_result.schema.json  inputs.manifest.schema.json  manifest.schema.json  policy.baseline.schema.json  preproc.index.schema.json
scripts/: debug_policy_import.py
src/: _repo.py  api_client_github.py  api_client_google.py  api_client_supabase.py  app.py  file_handler.py  policy_import.py  policy_validator.py  roles.py  settings.py  tempCodeRunnerFile.py
tests/: conftest.py  test_api_client_supabase.py  test_archive_safety.py  test_ast_cache.py  test_ast_disasm_mocked.py  test_ast_schema.py  test_ast_wiring.py  test_auditlog.py  test_auditor_case.py  test_auditor_error_reporting.py  test_auditor_evidence.py  test_auditor_evidence_autocollect.py  test_auditor_extract_and_manifest.py  test_auditor_hooks.py  test_auditor_intake.py  test_auditor_intake_filters.py  test_auditor_intake_write_manifest.py  test_auditor_preproc.py  test_auditor_preproc_numeric_mtime.py  test_binary_regex_adapter.py  test_core_kb.py  test_core_models.py  test_detector_run_merge.py  test_detectors_adapter.py  test_disasm_aarch64.py  test_disasm_adapter_mapping.py  test_disasm_cache.py  test_disasm_wiring.py  test_extract_move_and_permissions.py  test_extract_posix_metadata.py  test_file_handler.py  test_ghidra_adapter.py  test_intake_estimator.py  test_intake_iter.py  test_integration_ghidra.py  test_integration_intake.py  test_integration_preproc.py  test_merge_contributions.py  test_merge_weights.py  test_pages_auditlog_and_evidence.py  (+26 more)
tmp_policy_test/: policy.json
tools/: README.md  _tmp_export_check.py  bench_intake.py  build_tree_sitter.py  cancel_test.py  check_stream.py  compile_yara_test.py  consume_ghidra_exports.py  consume_ghidra_mock.py  debug_integration_runner.py  debug_run_ghidra_test.py  debug_setup_run.py  debug_setup_testlike.py  (+26 more)
(+89 files in other folders)
