[metadata]
name = identifying-cryptographic-function-in-blockchain
version = 0.0.0
description = Utilities to identify cryptographic functions in blockchain-related binaries and repositories
author =
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
py_modules = file_handler, app, roles, api_client_supabase, api_client_google, api_client_github
install_requires =
	python-dotenv>=0.21.0
	supabase>=1.0.0
	customtkinter>=5.2.2
	Pillow>=9.0.0
	tkinterdnd2>=0.3.0
	requests>=2.28.0

[options.packages.find]
where = src

package_dir =
	= src
